# pypkgs_jg

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_jg.rst
pypkgs_jg/: pypkgs_jg.py
tests/: test_pypkgs_jg.py
