[tool.poetry]
name = "pypkgs_jg"
version = "0.1.0"
description = "Python package that eases the pain of concatenating Pandas categoricals"
authors = ["johngoeltz <80011540+johngoeltz@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
