[tool.poetry]
name = "pypkgs_jg"
version = "0.1.1"
description = "Python package that eases the pain of concatenating Pandas categoricals"
authors = ["johngoeltz <80011540+johngoeltz@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
python-semantic-release = "^7.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pypkgs/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
